--- a/openshift-gitops/argocd-patch.yaml
+++ b/openshift-gitops/argocd-patch.yaml
@@ -4,20 +4,28 @@ metadata:
   name: openshift-gitops
   namespace: openshift-gitops
 spec:
+spec:
   repo:
+    env:
+    - name: KUSTOMIZE_PLUGIN_HOME
+      value: /etc/kustomize/plugin
     initContainers:
     - args:
       - -c
-      - mkdir -p /.config/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator && cp /policy-generator/PolicyGenerator-not-fips-compliant /.config/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator/PolicyGenerator
+      - cp /etc/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator/PolicyGenerator
+        /policy-generator/PolicyGenerator
       command:
       - /bin/bash
-      image: registry.redhat.io/rhacm2/multicluster-operators-subscription-rhel9:v2.10
+      image: registry.redhat.io/rhacm2/multicluster-operators-subscription-rhel8:v2.5
       name: policy-generator-install
       volumeMounts:
-      - mountPath: /.config
-        name: kustomize
+      - mountPath: /policy-generator
+        name: policy-generator
+    volumeMounts:
+    - mountPath: /etc/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator
+      name: policy-generator
     volumes:
     - emptyDir: {}
-      name: kustomize
+      name: policy-generator
   kustomizeBuildOptions: --enable-alpha-plugins
 
