--- a/openshift-gitops/argocd-patch.yaml
+++ b/openshift-gitops/argocd-patch.yaml
@@ -11,14 +11,15 @@ spec:
     initContainers:
       - args:
           - -c
-          - cp /etc/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator/PolicyGenerator /policy-generator/PolicyGenerator
+          - mkdir -p /.config/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator && cp /policy-generator/PolicyGenerator-not-fips-compliant /.config/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator/PolicyGenerator
         command:
           - /bin/bash
-        image: registry.redhat.io/rhacm2/multicluster-operators-subscription-rhel8:v2.5
+        image: registry.redhat.io/rhacm2/multicluster-operators-subscription-rhel9:v2.10
         name: policy-generator-install
+        imagePullPolicy: Always
         volumeMounts:
-          - mountPath: /policy-generator
-            name: policy-generator
+          - mountPath: /.config
+            name: kustomize
     volumeMounts:
       - mountPath: /etc/kustomize/plugin/policy.open-cluster-management.io/v1/policygenerator
         name: policy-generator
