--- a/kustomize2/policy1/policyGenerator.yaml
+++ b/kustomize2/policy1/policyGenerator.yaml
@@ -3,7 +3,7 @@ kind: PolicyGenerator
 metadata:
   name: install-compliance-operator
 policyDefaults:
-  namespace: policies
+  namespace: acm-policies
   placement:
     labelSelector:
       matchExpressions:
