--- a/kustomize2/policy1/policyGenerator.yaml
+++ b/kustomize2/policy1/policyGenerator.yaml
@@ -14,4 +14,4 @@ policyDefaults:
 policies:
   - name: install-compliance-operator
     manifests:
-      - path: compliance-operator.yaml
+      - path: compliance-operator
