--- a/kustomize2/policy2/policyGenerator.yaml
+++ b/kustomize2/policy2/policyGenerator.yaml
@@ -6,6 +6,8 @@ policyDefaults:
   namespace: policy-generator-blog
   remediationAction: enforce
   severity: medium
+  placement:
+    placementPath: local-placement.yaml
 policies:
   - name: policy-generator-blog-app
     manifests:
