--- a/kustomize/kustomization.yml
+++ b/kustomize/kustomization.yml
@@ -1,4 +1,6 @@
-generators:
-  - policyGenerator.yaml
-commonAnnotations:
-  argocd.argoproj.io/compare-options: IgnoreExtraneous
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+resources:
+  - policy1
+  - policy2
