--- a/kustomize/kustomization.yml
+++ b/kustomize/kustomization.yml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - policy1
-  - policy2
+  - policy-compliance-operator
+  - policy-test-deploy1 
