--- a/openshift-gitops/application.yaml
+++ b/openshift-gitops/application.yaml
@@ -16,3 +16,7 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+      - PruneLast=true
+      - PrunePropagationPolicy=background
