--- a/kustomize/kustomization.yml
+++ b/kustomize/kustomization.yml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - policy-compliance-operator
+  - policy-test-deploy1
