--- a/kustomize/container-deny-latest-tag/policyGenerator.yaml
+++ b/kustomize/container-deny-latest-tag/policyGenerator.yaml
@@ -10,7 +10,7 @@ policyDefaults:
     - CM Configuration Management
   controls: 
     - CM-2 Baseline Configuration
-  namespace: policies
+  namespace: acm-policies
   remediationAction: enforce
   severity: medium
   standards:
